reset window sizes/toggle visibility fix, excel borders

--- a/server/src/main/resources/web/bootstrap/excel/navigator/split-window-border.css
+++ b/server/src/main/resources/web/bootstrap/excel/navigator/split-window-border.css
@@ -1,8 +1,7 @@
-
-.split-h-dragger {
+.split-horz:not(.last-in-line) {
     border-right: var(--border-width) solid var(--split-border-color);
 }
 
-.split-v-dragger {
+.split-vert:not(.last-in-line) {
     border-bottom: var(--border-width) solid var(--split-border-color);
 }
